feat: improve how parameters are entered - migrate to vyke results - use vite-node

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
 	"compilerOptions": {
-		"target": "es2022",
-		"module": "ES2022",
+		"target": "ESNext",
+		"lib": ["ESNext"],
+		"moduleDetection": "force",
+		"module": "ESNext",
 		"moduleResolution": "Bundler",
 		"resolveJsonModule": true,
 		"strict": true,
