--- a/package.json
+++ b/package.json
@@ -10,22 +10,26 @@
 	"bin": {
 		"commage": "bin/commage.mjs"
 	},
+	"files": [
+		"bin",
+		"dist"
+	],
 	"scripts": {
-		"start": "jiti ./src/index.ts",
+		"start": "vite-node ./src/index.ts",
 		"build": "unbuild",
 		"test:lint": "eslint .",
+		"test:types": "tsc --noEmit",
 		"release": "standard-version -t v && pnpm publish --access public"
 	},
 	"dependencies": {
 		"@clack/core": "^0.3.3",
 		"@clack/prompts": "^0.7.0",
 		"@vyke/dency": "^0.0.8",
+		"@vyke/results": "^0.0.3",
 		"@vyke/sola": "^0.0.5",
 		"execa": "^8.0.1",
 		"handlebars": "^4.7.8",
-		"only-fns": "^2.0.1",
 		"picocolors": "^1.0.0",
-		"ts-results": "^3.3.0",
 		"tslib": "^2.6.2",
 		"ttab": "^0.8.0",
 		"yargs": "^17.7.2",
@@ -36,8 +40,14 @@
 		"@types/node": "^20.10.0",
 		"@types/yargs": "^17.0.32",
 		"eslint": "^8.55.0",
-		"jiti": "^1.21.0",
 		"standard-version": "^9.5.0",
-		"unbuild": "^2.0.0"
+		"typescript": "^5.3.2",
+		"unbuild": "^2.0.0",
+		"vite-node": "^1.0.1"
+	},
+	"standard-version": {
+		"skip": {
+			"changelog": true
+		}
 	}
 }
