--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "commage",
 	"type": "module",
 	"version": "0.0.3",
+	"packageManager": "pnpm@8.11.0",
 	"description": "",
 	"author": "Jose Albizures <jose@albizures.com> (https://albizures.com/)",
 	"license": "ISC",
